<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".login.LoginActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_70dp"
                android:gravity="center"
                android:text="Register Your Details"
                android:textColor="@color/black"
                android:textSize="@dimen/_25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtfName"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15dp"
                android:layout_marginTop="@dimen/_100dp"
                android:paddingHorizontal="@dimen/_15dp"
                android:paddingVertical="@dimen/_10dp"
                android:background="@drawable/edittext_shape"
                android:hint="@string/enter_first_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/purple_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtlName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15dp"
                android:layout_marginTop="@dimen/_20dp"
                android:hint="@string/enter_last_name"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"

                android:paddingHorizontal="@dimen/_15dp"
                android:paddingVertical="@dimen/_10dp"
                android:background="@drawable/edittext_shape"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/purple_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15dp"
                android:layout_marginTop="@dimen/_20dp"
                android:hint="@string/enter_mobile"
                android:inputType="number"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"

                android:paddingHorizontal="@dimen/_15dp"
                android:paddingVertical="@dimen/_10dp"
                android:background="@drawable/edittext_shape"
                android:textColor="@color/black"
                android:textColorHint="@color/purple_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@."

                android:paddingHorizontal="@dimen/_15dp"
                android:paddingVertical="@dimen/_10dp"
                android:background="@drawable/edittext_shape"
                android:textColorHint="@color/purple_200"
                android:layout_marginTop="@dimen/_20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15dp"
                android:layout_marginTop="@dimen/_20dp"
                android:hint="@string/enter_password"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"

                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_15dp"
                android:paddingVertical="@dimen/_10dp"
                android:background="@drawable/edittext_shape"
                android:textColor="@color/black"
                android:textColorHint="@color/purple_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_50dp"
                android:text="SignUp" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10dp"
                android:text="Login" />





        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</layout>